<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mahsum.puzzleBuilder.loadImage.PickImageFragment">

  <android.support.v7.widget.RecyclerView
      android:id="@+id/savedPuzzles"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

  </android.support.v7.widget.RecyclerView>

  <android.support.design.widget.FloatingActionButton
      android:id="@+id/addPuzzleFab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_margin="20dp"
      android:src="@drawable/circle_add"
      app:fabSize="auto" />

</RelativeLayout>
